--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,26 @@
 body {
   padding: 50px; }
 
-#play-button {
-  background-color: #FF9800;
-  color: white;
-  font-size: 1em;
-  border: 0;
-  border-radius: 3px;
-  padding: 12px 16px;
-  min-width: 200px; }
-  #play-button:hover {
-    background-color: #FFB74D; }
-  #play-button:active {
-    background-color: #F57C00; }
-  #play-button:focus {
-    outline: 0; }
+.song {
+  float: left;
+  margin-right: 50px; }
+  .song:last-child {
+    margin-right: 0; }
+  .song h3 {
+    margin-top: 0; }
+  .song button {
+    background-color: #FF9800;
+    color: white;
+    font-size: 1em;
+    border: 0;
+    border-radius: 3px;
+    padding: 12px 16px;
+    min-width: 200px; }
+    .song button:hover {
+      background-color: #FFB74D; }
+    .song button:active {
+      background-color: #F57C00; }
+    .song button:focus {
+      outline: 0; }
 
 /*# sourceMappingURL=style.css.map */
