--- a/css/style.scss
+++ b/css/style.scss
@@ -2,24 +2,37 @@ body {
   padding: 50px;
 }
 
-#play-button {
-  background-color: #FF9800;
-  color: white;
-  font-size: 1em;
-  border: 0;
-  border-radius: 3px;
-  padding: 12px 16px;
-  min-width: 200px;
+.song {
+  float: left;
+  margin-right: 50px;
 
-  &:hover {
-    background-color: #FFB74D;
+  &:last-child {
+    margin-right: 0;
   }
 
-  &:active {
-    background-color: #F57C00;
+  h3 {
+    margin-top: 0;
   }
 
-  &:focus {
-    outline: 0;
+  button {
+    background-color: #FF9800;
+    color: white;
+    font-size: 1em;
+    border: 0;
+    border-radius: 3px;
+    padding: 12px 16px;
+    min-width: 200px;
+
+    &:hover {
+      background-color: #FFB74D;
+    }
+
+    &:active {
+      background-color: #F57C00;
+    }
+
+    &:focus {
+      outline: 0;
+    }
   }
 }
